# GROOT

./: .gitignore  CMakeLists.txt
GrootClient/GrootPlayer/GrootPlayer/: Renderer.swift  TcpStream.c  TcpStream.h  ViewController.swift
GrootClient/GrootPlayer/GrootPlayer.xcodeproj/: project.pbxproj
GrootServer/pdtree-decoder/: JpegDecoder.cpp
GrootServer/pdtree-encoder/: CMakeLists.txt  Frame.cpp  Frame.hpp  JpegEncoder.cpp  main.cpp
examples/: CMakeLists.txt  decode_files.cpp  realsense_live_encoder.cpp  realsense_live_encoder_server.cpp  stream_decoder.cpp
include/groot/: Decoder.hpp  Frame.hpp  JpegDecoder.hpp  JpegEncoder.hpp
src/: CMakeLists.txt
src/pdtree-decoder/: Decoder.cpp  JpegDecoder.cpp
src/pdtree-encoder/: Frame.cpp  JpegEncoder.cpp
tests/: CMakeLists.txt  groot_test.cpp
